--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <title>Chest Registry</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="root"></div>
   <script type="text/javascript" src="./bundle.js"></script>
 </body>
 </html>
